--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
+<!DOCTYPE html>
 <html>
 <head>
 <title> MHOW </title></head>
 <body>
-<h1 style="background-color:Tomato;"><marquee><b><strong><u>MHOW</b></strong></u></marquee></h1>
+<h1 style="background-color:Tomato;"><marquee><b><strong><u>MHOW</b></strong></u></marquee></h1><br>
 <h3 style="background-color:DodgerBlue;">Introduction</h3>
 <p style="text-align:center;"><div>	Mhow, officially known as Dr Ambedkar Nagar, is a cantonment in the Indore District in Madhya Pradesh state of India. It is located 23 kilometres (14 mi) south of Indore city towards Mumbai on the Mumbai-Agra Road. The town was renamed as Dr Ambedkar Nagar in 2003, by the Government of Madhya Pradesh.</div></p>
 
@@ -14,7 +15,7 @@ In 2003, the town was renamed Dr. Ambedkar Nagar in honour of B. R. Ambedkar, wh
 </div>
 
 <h3 style="background-color:DodgerBlue;">History</h3>
-<div style="background-color:lightgray;">This cantonment town was founded in 1818 by John Malcolm as a result of the Treaty of Mandsaur between the English and the Holkars who were the Maratha Maharajas of Indore. John Malcolm's forces had defeated the Holkars of the Maratha Confederacy at the Battle of Mahidpur in 1818. It was after this battle that the capital of the Holkars shifted from the town of Maheshwar on the banks of the Narmada to Indore.
+<div style="background-color:lightgray;">	This cantonment town was founded in 1818 by John Malcolm as a result of the Treaty of Mandsaur between the English and the Holkars who were the Maratha Maharajas of Indore. John Malcolm's forces had defeated the Holkars of the Maratha Confederacy at the Battle of Mahidpur in 1818. It was after this battle that the capital of the Holkars shifted from the town of Maheshwar on the banks of the Narmada to Indore.
 Mhow used to be the headquarters of the 5th (Mhow) Division of the Southern Command during the British Raj. Today this small town is associated with the Indian Army and with Bharat Ratna Dr. B. R. Ambedkar an economist, philosopher, jurist, anthropologist, Buddhist activist, a revolutionary, a prolific writer and a political leader who was born here.
 Mhow was a meter gauge railway district headquarters during the British Raj and even after 1947.<span> The irony is that Mhow finally has a broad gauge connection with Indore but regular train services are yet to commence.
 According to Hindu religious texts, Janapav Kuti near Mhow is said to be the birthplace of Parashurama, an avatar of Vishnu.
@@ -22,7 +23,7 @@ According to Hindu religious texts, Janapav Kuti near Mhow is said to be the bir
 </div>
 
 <h3 style="background-color:DodgerBlue;">Demographics</h3>
-<article style="background-color:lightgray;">As of 2011 India census, Mhow had a population of 85,023. Males constitute 54% of the population and females 46%. Mhow has an average literacy rate of 72%, higher than the national average of 59.5%; male literacy is 78%, and female literacy is 65%. The Mhow Cantt Cantonment Board has population of 81,702 of which 43,888 are males while 37,814 are females as per report released by Census India 2011.
+<article style="background-color:lightgray;">	As of 2011 India census, Mhow had a population of 85,023. Males constitute 54% of the population and females 46%. Mhow has an average literacy rate of 72%, higher than the national average of 59.5%; male literacy is 78%, and female literacy is 65%. The Mhow Cantt Cantonment Board has population of 81,702 of which 43,888 are males while 37,814 are females as per report released by Census India 2011.
 Population of Children with age of 0-6 is 9308 which is 11.39% of total population of Mhow Cantt (CB). In Mhow Cantt Cantonment Board, Female Sex Ratio is of 862 against state average of 931. Moreover, Child Sex Ratio in Mhow Cantt is around 908 compared to Madhya Pradesh state average of 918. Literacy rate of Mhow Cantt city is 85.78%; higher than state average of 69.32%. In Mhow Cantt, Male literacy is around 90.42% while female literacy rate is 80.37%.
 </article>
 
@@ -67,7 +68,7 @@ The college was originally established as the College of Combat at Mhow on April
 	<br>
 	<br>
 	<hr>
-	<p style="text-align:center;"> ~Regards<br>Capt Shailendra Singh</p><! its done>
+	<p style="text-align:center;"> ~Regards<br>Capt Shailendra Singh</p>
 
 </section>
 </body></html>
