--- a/mhow.html
+++ b/mhow.html
@@ -3,10 +3,9 @@
 <head>
 <title> MHOW </title></head>
 <body>
-<h1 style="background-color:Tomato;"><marquee><b><strong><u>MHOW</b></strong></u></marquee></h1><br>
+<h1 style="background-color:Tomato;"><marquee><u>MHOW</u></marquee></h1><br>
 <h3 style="background-color:DodgerBlue;">Introduction</h3>
-<p style="text-align:center;"><div>	Mhow, officially known as Dr Ambedkar Nagar, is a cantonment in the Indore District in Madhya Pradesh state of India. It is located 23 kilometres (14 mi) south of Indore city towards Mumbai on the Mumbai-Agra Road. The town was renamed as Dr Ambedkar Nagar in 2003, by the Government of Madhya Pradesh.</div></p>
-
+<p style="background-color:Lightgray;">	Mhow, officially known as Dr Ambedkar Nagar, is a cantonment in the Indore District in Madhya Pradesh state of India. It is located 23 kilometres (14 mi) south of Indore city towards Mumbai on the Mumbai-Agra Road. The town was renamed as Dr Ambedkar Nagar in 2003, by the Government of Madhya Pradesh.</p>
 
 <h3 style="background-color:DodgerBlue;">Etymology</h3>
 <div style="background-color:lightgray;">	There is total lack of unanimity on how Mhow got its name. One possible source of the name might be the Mahua (Madhuca longifolia) tree, which grows in profusion in the forests around Mhow.
