--- a/mhow.html
+++ b/mhow.html
@@ -5,7 +5,7 @@
 <title> MHOW </title></head>
 <body>
 <marquee> <h1 style="background-color:Tomato;">  <u> MHOW </u> </h1> </marquee> 
-<center><img src="images.jpg" alt="mhow"></body></center>
+<marquee><img src="images.jpg" alt="mhow"></body></marquee>
 <h3 style="background-color:DodgerBlue;">Introduction</h3>
 <p style="background-color:lightgray">	Mhow, officially known as Dr Ambedkar Nagar, is a cantonment in the Indore District in Madhya Pradesh state of India. It is located 23 kilometres (14 mi) south of Indore city towards Mumbai on the Mumbai-Agra Road. The town was renamed as Dr Ambedkar Nagar in 2003, by the Government of Madhya Pradesh.</p>
 <hr>
